Creacion de componentes  new y about, agregado a router.module

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -8,16 +8,16 @@
     items-center">
 
     <div class="w-1/3 flex items-baseline">
-        <img class="h-12" src="https://fontmeme.com/permalink/220718/7ed097eb0ec6011e22f45271eed277f2.png" alt="PokeMemoLogo"
-            srcset="">
+        <img class="h-12 cursor-pointer" src="https://fontmeme.com/permalink/220718/7ed097eb0ec6011e22f45271eed277f2.png" alt="PokeMemoLogo"
+            srcset="" routerLink="/">
             <p class="text-white font-semibold">By Emiliano</p>
     </div>
     <ul class="w-1/3 flex justify-evenly text-[#0075BE] font-poke ">
-        <li>
-            <a class=" hover:border-b-2  hover:border-[#FFCC00]" href="">Nuevo Juego</a>
+        <li class=" hover:border-b-2  hover:border-[#FFCC00]" >
+            <a routerLink="new">Nuevo Juego</a>
         </li>
-        <li>
-            <a class=" hover:border-b-2  hover:border-[#FFCC00]" href="">Acerca de</a>
+        <li class="hover:border-b-2  hover:border-[#FFCC00]" >
+            <a routerLink="about">Acerca de</a>
         </li>
     </ul>
 </nav>
