Agregado UI en ruta New, form de comienzo

--- a/src/app/new/new.component.html
+++ b/src/app/new/new.component.html
@@ -1,1 +1,71 @@
-<p class="text-white">new works!</p>
+<div class="h-[90vh] w-full flex flex-col justify-around items-center">
+    <div>
+        <img src="https://fontmeme.com/permalink/220718/7ed097eb0ec6011e22f45271eed277f2.png" alt="">
+    </div>
+
+    <div class="block p-6 rounded-lg shadow-lg bg-[#FFCC00]  max-w-md">
+        <form>
+
+            <div class="form-group mb-6">
+                <input type="text" class="form-control block
+              w-full
+              px-3
+              py-1.5
+              text-base
+              font-normal
+              text-gray-700
+              bg-white bg-clip-padding
+              border border-solid border-gray-300
+              rounded
+              transition
+              ease-in-out
+              m-0
+              focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none
+              placeholder:font-poke
+              placeholder:text-[#0075BE]" id="nombre" placeholder="Ingresa tu nombre">
+            </div>
+
+            <div class="mb-6">
+                <label for="dificulty" class="block mb-2 text-sm font-medium text-[#0075BE]">Selecciona la
+                    dificultad</label>
+                <select id="countries" class="
+                    bg-gray-50 border 
+                    border-gray-300
+                    text-gray-900 
+                    text-sm 
+                    rounded-lg 
+                    focus:ring-blue-500
+                    focus:border-blue-600
+                    block w-full 
+                    px-3 py-1.5">
+                    <option>Facil</option>
+                    <option>Medio</option>
+                    <option>Dificil</option>
+                    <option>Muy dificil</option>
+                </select>
+
+            </div>
+
+
+
+            <button type="submit" class="
+            w-full
+            px-6
+            py-2.5
+            bg-[#0A285F]
+            text-white
+            font-medium
+            text-xs
+            leading-tight
+            uppercase
+            rounded
+            shadow-md
+            hover:bg-[#0075BE] hover:shadow-lg
+            focus:bg-[#0075BE] focus:shadow-lg focus:outline-none focus:ring-0
+            active:bg-[#0075BE]active:shadow-lg
+            transition
+            duration-150
+            ease-in-out">Comienza</button>
+        </form>
+    </div>
+</div>
