Formulario reactivo en /new

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <!-- <app-card></app-card> -->
     <!-- <app-card-table></app-card-table> -->
 
-    <div class="p-12 text-center relative overflow-hidden bg-no-repeat bg-cover h-96 lg:h-screen"
+    <div class="p-12 text-center relative overflow-hidden bg-no-repeat bg-cover h-screen"
         style="background-image: url('https://images.pexels.com/photos/9661258/pexels-photo-9661258.jpeg')">
         <div class="absolute top-0 right-0 bottom-0 left-0 w-full h-full overflow-hidden bg-fixed"
             style="background-color: rgba(10, 40, 95, 0.7)">
