--- a/src/app/new/new.component.html
+++ b/src/app/new/new.component.html
@@ -1,13 +1,16 @@
-<div class="h-[90vh] w-full flex flex-col justify-around items-center">
-    <div>
-        <img src="https://fontmeme.com/permalink/220718/7ed097eb0ec6011e22f45271eed277f2.png" alt="">
-    </div>
+<div class="h-[90vh] w-full flex flex-col justify-evenly items-center">
+
+    <img class="h-20 lg:h-auto" src="https://fontmeme.com/permalink/220718/7ed097eb0ec6011e22f45271eed277f2.png" alt="">
+
 
     <div class="block p-6 rounded-lg shadow-lg bg-[#FFCC00]  max-w-md">
-        <form>
+
+
+        <form [formGroup]="newGameform" (submit)="setValue()">
 
             <div class="form-group mb-6">
-                <input type="text" class="form-control block
+                <label for="name">Nombre</label>
+                <input type="text" id="name" class="form-control block
               w-full
               px-3
               py-1.5
@@ -22,13 +25,16 @@
               m-0
               focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none
               placeholder:font-poke
-              placeholder:text-[#0075BE]" id="nombre" placeholder="Ingresa tu nombre">
+              placeholder:text-[#0A285F]" placeholder="Ingresa tu nombre" formControlName="name" required>
+                <div  *ngIf="newGameform.get('name')?.errors?.['required']">
+                    <p class="text-red-600 ">El campo nombre debe ser completado.</p>
+                </div>
             </div>
 
             <div class="mb-6">
                 <label for="dificulty" class="block mb-2 text-sm font-medium text-[#0075BE]">Selecciona la
                     dificultad</label>
-                <select id="countries" class="
+                <select id="dificulty" class="
                     bg-gray-50 border 
                     border-gray-300
                     text-gray-900 
@@ -37,18 +43,21 @@
                     focus:ring-blue-500
                     focus:border-blue-600
                     block w-full 
-                    px-3 py-1.5">
-                    <option>Facil</option>
-                    <option>Medio</option>
-                    <option>Dificil</option>
-                    <option>Muy dificil</option>
+                    px-3 py-1.5" formControlName="dificulty">
+
+                    <option value="" disabled selected> Elija la dificultad</option>
+                    <option value="easy">Facil</option>
+                    <option value="medium">Medio</option>
+                    <option value="hard">Dificil</option>
+                    <option value="very hard">Muy dificil</option>
+
                 </select>
 
             </div>
 
 
 
-            <button type="submit" class="
+            <button class="
             w-full
             px-6
             py-2.5
@@ -65,7 +74,7 @@
             active:bg-[#0075BE]active:shadow-lg
             transition
             duration-150
-            ease-in-out">Comienza</button>
+            ease-in-out" >Comienza</button>
         </form>
     </div>
 </div>
