--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,20 +4,20 @@
     bg-black 
     text-center 
     flex
-    justify-center
+    justify-around lg:justify-center
     items-center">
 
-    <div class="w-1/3 flex items-baseline">
-        <img class="h-12 cursor-pointer" src="https://fontmeme.com/permalink/220718/7ed097eb0ec6011e22f45271eed277f2.png" alt="PokeMemoLogo"
+    <div class="w-1/3 flex items-center">
+        <img class=" h-12 cursor-pointer" src="https://fontmeme.com/permalink/220718/7ed097eb0ec6011e22f45271eed277f2.png" alt="PokeMemoLogo"
             srcset="" routerLink="/">
-            <p class="text-white font-semibold">By Emiliano</p>
+            <!-- <p class="text-white font-semibold text-xs self-end">By Emiliano</p> -->
     </div>
-    <ul class="w-1/3 flex justify-evenly text-[#0075BE] font-poke ">
-        <li class=" hover:border-b-2  hover:border-[#FFCC00]" >
-            <a routerLink="new">Nuevo Juego</a>
+    <ul class="w-1/3 flex justify-evenly text-[#0075BE] font-poke text-xs">
+        <li class="p-0.5">
+            <a class="hover:border-b-2 hover:border-[#FFCC00]" routerLink="new">Nuevo Juego</a>
         </li>
-        <li class="hover:border-b-2  hover:border-[#FFCC00]" >
-            <a routerLink="about">Acerca de</a>
+        <li class="p-0.5">
+            <a class="hover:border-b-2 hover:border-[#FFCC00]" routerLink="about">Acerca de</a>
         </li>
     </ul>
 </nav>
