--- a/src/app/components/card-table/card-table.component.html
+++ b/src/app/components/card-table/card-table.component.html
@@ -24,6 +24,9 @@
         </div>
     </div>
 
-    <app-card class="grid grid-cols-5 gap-x-0 gap-y-0 justify-items-center" [items]="pokemonList"></app-card>       
+    <app-card class="grid 
+    md:grid-cols-5 md:gap-x-0 md:gap-y-0 
+    sm:grid-cols-4 sm:gap-x-0 sm:gap-y-0
+    justify-items-center" [items]="pokemonList"></app-card>       
 
 </div>
